On branch master  Your branch is up to date with 'origin/master'.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
    <div class="main ">
-        <div class="container">
+        <div class="container media-container">
          <nav>
              <div class="nav-row">
                  <div class="logo-col">
@@ -39,7 +39,7 @@
     <div class="info-text">
        
             <div class="info-row">
-                <div class="text-col container">
+                <div class="text-col container ">
                     <div class="info-header ">
                         <h2>Next generation <br> digital banking</h2>
                     </div>
@@ -89,7 +89,7 @@
             </div>
         </div>
 
-        <div class="about-row container">
+        <div class="about-row container media-container">
             <div class="about-col">
                 <div class="col-content">
                     <img src="images/icon-online.svg" alt="">
@@ -148,7 +148,7 @@
         
     </div>
 
-    <div class="article-row container">
+    <div class="article-row container media-container">
         <div class="article-col">
             <div class="col-content">
                 <img src="images/image-currency.jpg" alt="">
@@ -217,7 +217,7 @@
 </div>
 <section id="footer">
     <div class="footer">
-        <div class="footer-row container">
+        <div class="footer-row container media-container">
             <div class="logo-col">
                 <div class="logo">
                     <img src="images/logo-white.svg" alt="">
