On branch master Your branch is up to date with 'origin/master'.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <div class="article-row container media-container">
         <div class="article-col">
             <div class="col-content">
-                <img src="images/image-currency.jpg" alt="">
+                <img src="images/image-currency.jpg" alt="" class="image1">
                 <div class="small-container">
                     <h4>Recieve money with any currency with no fee</h4>
                     <p>
